--- a/Sudoku.UI/Sudoku.UI/Sudoku.UI.csproj
+++ b/Sudoku.UI/Sudoku.UI/Sudoku.UI.csproj
@@ -5,4 +5,8 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>DEBUG</DefineConstants>
+  </PropertyGroup>
+
 </Project>
