--- a/Sudoku.UI/Sudoku.UI/Sudoku.UI.csproj
+++ b/Sudoku.UI/Sudoku.UI/Sudoku.UI.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>DEBUG</DefineConstants>
+    <DefineConstants>DEBUG; LOG</DefineConstants>
   </PropertyGroup>
 
 </Project>
